test numéro 100ème

--- a/index.xhtml
+++ b/index.xhtml
@@ -24,9 +24,9 @@
         </ul>
         <ul>
             <li>Séance 3 :</li>
-            <li><a href="xhtml/séance 3/exo 1/index.xhtml">Exo 1 sous format Site Web</a></li>
-            <li><a href="xhtml/séance 3/exo 2/index.xhtml">Exo 2 sous format Site Web</a></li>
-            <li><a href="xhtml/séance 3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
+            <li><a href="xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
+            <li><a href="xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
+            <li><a href="xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
         </ul>
     </ul>
 </body>
