--- a/index.xhtml
+++ b/index.xhtml
@@ -24,10 +24,15 @@
         </ul>
         <ul>
             <li>Séance 3 :</li>
-            <li><a href="xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
-            <li><a href="xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
-            <li><a href="xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
-        </ul>
+            <ul>
+                <li><a href="xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
+                <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format lignes de codes</a></li>
+                <li><a href="xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
+                <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format lignes de codes</a></li>
+                <li><a href="xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
+                <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format lignes de codes</a></li>
+            </ul>
+         </ul>
     </ul>
 </body>
 
