--- a/index.xhtml
+++ b/index.xhtml
@@ -25,12 +25,21 @@
         <ul>
             <li>Séance 3 :</li>
             <ul>
-                <li><a href="xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
-                <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format lignes de codes</a></li>
-                <li><a href="xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
-                <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format lignes de codes</a></li>
-                <li><a href="xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
-                <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format lignes de codes</a></li>
+                <li>Exo 1</li>
+                <ul>
+                    <li><a href="xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
+                    <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format lignes de codes</a></li>
+                </ul>
+                <li>Exo 2</li>
+                <ul>
+                    <li><a href="xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
+                    <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format lignes de codes</a></li>
+                </ul>
+                <li>Exo Bonus</li>
+                <ul>
+                    <li><a href="xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
+                    <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format lignes de codes</a></li>
+                </ul>
             </ul>
          </ul>
     </ul>
