début de la séance 2

--- a/index.xhtml
+++ b/index.xhtml
@@ -9,40 +9,64 @@
 
 </head>
 
-<body>
-    <h1>YOOOOOOOOOOOOO</h1>
-    <p>Petit GitHub fait pour vous aidez en Doc Web ou tout simplement pour copier <br/>
-         le texte car bon soyons franc c'est chiant mdr</p>
+    <body>
+        <h1>YOOOOOOOOOOOOO</h1>
+        <p>Petit GitHub fait pour vous aidez en Doc Web ou tout simplement pour copier <br/>
+            le texte car bon soyons franc c'est chiant mdr</p>
 
-    <ul>
-        <li>XHTML :</li>
         <ul>
-            <li>Séance 1 :</li>
-        </ul>
-        <ul>
-            <li>Séance 2 :</li>
-        </ul>
-        <ul>
-            <li>Séance 3 :</li>
+            <li>XHTML :</li>
             <ul>
-                <li>Exo 1</li>
+                <li>Séance 1 :</li>
                 <ul>
-                    <li><a href="xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
-                    <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format lignes de codes</a></li>
-                </ul>
-                <li>Exo 2</li>
-                <ul>
-                    <li><a href="xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
-                    <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format lignes de codes</a></li>
-                </ul>
-                <li>Exo Bonus</li>
-                <ul>
-                    <li><a href="xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
-                    <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format lignes de codes</a></li>
+                    <li>Exo 2 :</li>
+                    <ul>
+                        <li><a href="xhtml/seance-1/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-2/index.xhtml">Exo 2 sous format ligne de code</a></li>
+                    </ul>
+                    <li>Exo 6 :</li>
+                    <ul>
+                        <li><a href="xhtml/seance-1/exo-6/index.xhtml">Exo 6 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-6/index.xhtml">Exo 6 sous format ligne de code</a></li>
+                    </ul>
                 </ul>
             </ul>
-         </ul>
-    </ul>
-</body>
+            <ul>
+                <li>Séance 2 :</li>
+                <ul>
+                    <li>Exo 1 :</li>
+                    <ul>
+                        <li><a href="xhtml/seance-2/exo-1/index.xhtml">Exo 1 sous format Site Web (donc la soluce de l'exo)</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-1/index.xhtml">Exo 1 sous format ligne de code</a></li>
+                    </ul>
+                    <li>Exo 2 :</li>
+                    <ul>
+                        <li><a href="xhtml/seance-2/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-2/index.xhtml">Exo 2 sous format ligne de code</a></li>
+                    </ul>
+                </ul>
+            </ul>
+            <ul>
+                <li>Séance 3 :</li>
+                <ul>
+                    <li>Exo 1</li>
+                    <ul>
+                        <li><a href="xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format lignes de codes</a></li>
+                    </ul>
+                    <li>Exo 2</li>
+                    <ul>
+                        <li><a href="xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format lignes de codes</a></li>
+                    </ul>
+                    <li>Exo Bonus</li>
+                    <ul>
+                        <li><a href="xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format lignes de codes</a></li>
+                    </ul>
+                </ul>
+            </ul>
+        </ul>
+    </body>
 
 </html>
