--- a/xhtml/seance-2/exo-1/index.xhtml
+++ b/xhtml/seance-2/exo-1/index.xhtml
@@ -16,24 +16,30 @@
         </table>
 
         <table border="1">
-        <tr><td><table border="6" width="100%">
-                <tr><td><a href="cinema.html">cinéma</a></td></tr>
-                </table>
-            </td>
-            <td>films à l'affiche...</td>
-        </tr>
-        <tr><td><table border="6" width="100%">
-                <tr><td><a href="concert.html">concert</a></td></tr>
-                </table>
-            </td>
-            <td>ou irez-vous cette semaine ?</td>
-        </tr>
-        <tr><td><table border="6" width="100%">
-                <tr><td><a href="theatre.html">théatre</a></td></tr>
-                </table>
-            </td>
-            <td>un spectacle exeptionnel</td>
-        </tr>
+            <tr>
+                <td>
+                    <table border="6" width="100%">
+                        <tr><td><a href="cinema.html">cinéma</a></td></tr>
+                    </table>
+                </td>
+                <td>films à l'affiche...</td>
+            </tr>
+            <tr>
+                <td>
+                    <table border="6" width="100%">
+                        <tr><td><a href="concert.html">concert</a></td></tr>
+                    </table>
+                </td>
+                <td>ou irez-vous cette semaine ?</td>
+            </tr>
+            <tr>
+                <td>
+                    <table border="6" width="100%">
+                        <tr><td><a href="theatre.html">théatre</a></td></tr>
+                    </table>
+                </td>
+                <td>un spectacle exeptionnel</td>
+            </tr>
         </table>
     </body>
 
