--- a/index.xhtml
+++ b/index.xhtml
@@ -67,6 +67,54 @@
                 </ul>
             </ul>
         </ul>
+        <ul>
+            <li>CSS :</li>
+            <ul>
+                <li>Séance 1 :</li>
+                <ul>
+                    <li>Exo 2 :</li>
+                    <ul>
+                        <li><a href="css/seance-1/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-2/assets/index.css">Exo 2 sous format ligne de code</a></li>
+                    </ul>
+                    <li>Exo 3 :</li>
+                    <ul>
+                        <li><a href="css/seance-1/exo-3/index.xhtml">Exo 3 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-3/assets/index.css">Exo 3 sous format ligne de code</a></li>
+                    </ul>
+                    <li>Exo 4 :</li>
+                    <ul>
+                        <li><a href="css/seance-1/exo-4/index.xhtml">Exo 4 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-4/assets/index.css">Exo 4 sous format ligne de code</a></li>
+                    </ul>
+                </ul>
+            </ul>
+            <ul>
+                <li>Séance 2 :</li>
+                <ul>
+                    <li>Exo 1 :</li>
+                    <ul>
+                        <li><a href="CSS/seance-2/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-1/assets/index.css">Exo 1 sous format ligne de code</a></li>
+                    </ul>
+                    <li>Exo 2 :</li>
+                    <ul>
+                        <li><a href="css/seance-2/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/assets/index.css">Exo 2 sous format ligne de code</a></li>
+                    </ul>
+                </ul>
+            </ul>
+            <ul>
+                <li>Séance 3 :</li>
+                <ul>
+                    <li>Exo 1</li>
+                    <ul>
+                        <li><a href="css/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1/assets/index.css">Exo 1 sous format lignes de codes</a></li>
+                    </ul>
+                </ul>
+            </ul>
+        </ul>
     </body>
 
 </html>
