--- a/index.xhtml
+++ b/index.xhtml
@@ -21,13 +21,13 @@
                 <ul>
                     <li>Exo 2 :</li>
                     <ul>
-                        <li><a href="xhtml/seance-1/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-2/index.xhtml">Exo 2 sous format ligne de code</a></li>
+                        <li><a href="xhtml/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>
                     <li>Exo 6 :</li>
                     <ul>
-                        <li><a href="xhtml/seance-1/exo-6/index.xhtml">Exo 6 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-6/index.xhtml">Exo 6 sous format ligne de code</a></li>
+                        <li><a href="xhtml/seance-1/exo-6/index.xhtml" target="_blank">Exo 6 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-6/index.xhtml" target="_blank">Exo 6 sous format ligne de code</a></li>
                     </ul>
                 </ul>
             </ul>
@@ -36,13 +36,13 @@
                 <ul>
                     <li>Exo 1 :</li>
                     <ul>
-                        <li><a href="xhtml/seance-2/exo-1/index.xhtml">Exo 1 sous format Site Web (donc la soluce de l'exo)</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-1/index.xhtml">Exo 1 sous format ligne de code</a></li>
+                        <li><a href="xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web (donc la soluce de l'exo)</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format ligne de code</a></li>
                     </ul>
                     <li>Exo 2 :</li>
                     <ul>
-                        <li><a href="xhtml/seance-2/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-2/index.xhtml">Exo 2 sous format ligne de code</a></li>
+                        <li><a href="xhtml/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>
                 </ul>
             </ul>
@@ -51,18 +51,18 @@
                 <ul>
                     <li>Exo 1</li>
                     <ul>
-                        <li><a href="xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml">Exo 1 sous format lignes de codes</a></li>
+                        <li><a href="xhtml/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format lignes de codes</a></li>
                     </ul>
                     <li>Exo 2</li>
                     <ul>
-                        <li><a href="xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml">Exo 2 sous format lignes de codes</a></li>
+                        <li><a href="xhtml/seance-3/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml" target="_blank">Exo 2 sous format lignes de codes</a></li>
                     </ul>
                     <li>Exo Bonus</li>
                     <ul>
-                        <li><a href="xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml">Exo Bonus sous format lignes de codes</a></li>
+                        <li><a href="xhtml/seance-3/bonus/index.xhtml" target="_blank">Exo Bonus sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml" target="_blank">Exo Bonus sous format lignes de codes</a></li>
                     </ul>
                 </ul>
             </ul>
@@ -74,18 +74,18 @@
                 <ul>
                     <li>Exo 2 :</li>
                     <ul>
-                        <li><a href="css/seance-1/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-2/assets/index.css">Exo 2 sous format ligne de code</a></li>
+                        <li><a href="css/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-2/assets/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>
                     <li>Exo 3 :</li>
                     <ul>
-                        <li><a href="css/seance-1/exo-3/index.xhtml">Exo 3 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-3/assets/index.css">Exo 3 sous format ligne de code</a></li>
+                        <li><a href="css/seance-1/exo-3/index.xhtml" target="_blank">Exo 3 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-3/assets/index.css" target="_blank">Exo 3 sous format ligne de code</a></li>
                     </ul>
                     <li>Exo 4 :</li>
                     <ul>
-                        <li><a href="css/seance-1/exo-4/index.xhtml">Exo 4 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-4/assets/index.css">Exo 4 sous format ligne de code</a></li>
+                        <li><a href="css/seance-1/exo-4/index.xhtml" target="_blank">Exo 4 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-4/assets/index.css" target="_blank">Exo 4 sous format ligne de code</a></li>
                     </ul>
                 </ul>
             </ul>
@@ -94,13 +94,13 @@
                 <ul>
                     <li>Exo 1 :</li>
                     <ul>
-                        <li><a href="CSS/seance-2/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-1/assets/index.css">Exo 1 sous format ligne de code</a></li>
+                        <li><a href="CSS/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-1/assets/index.css" target="_blank">Exo 1 sous format ligne de code</a></li>
                     </ul>
                     <li>Exo 2 :</li>
                     <ul>
-                        <li><a href="css/seance-2/exo-2/index.xhtml">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/assets/index.css">Exo 2 sous format ligne de code</a></li>
+                        <li><a href="css/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/assets/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>
                 </ul>
             </ul>
@@ -109,8 +109,8 @@
                 <ul>
                     <li>Exo 1</li>
                     <ul>
-                        <li><a href="css/seance-3/exo-1/index.xhtml">Exo 1 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1/assets/index.css">Exo 1 sous format lignes de codes</a></li>
+                        <li><a href="css/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
+                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1/assets/index.css" target="_blank">Exo 1 sous format lignes de codes</a></li>
                     </ul>
                 </ul>
             </ul>
