on continue sur le css

--- a/index.xhtml
+++ b/index.xhtml
@@ -88,7 +88,7 @@
                         <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-4/assets/css/index.css" target="_blank">Exo 4 sous format ligne de code</a></li>
                     </ul>
                 </ul>
-            </ul><!--
+            </ul>
             <ul>
                 <li>Séance 2 :</li>
                 <ul>
@@ -97,14 +97,14 @@
                         <li><a href="CSS/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
                         <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-1/assets/css/index.css" target="_blank">Exo 1 sous format ligne de code</a></li>
                     </ul>
-                    <li>Exo 2 :</li>
+                 <!--   <li>Exo 2 :</li>
                     <ul>
                         <li><a href="css/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
                         <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/assets/css/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
-                    </ul>
+                    </ul>-->
                 </ul>
             </ul>
-            <ul>
+            <!--<ul>
                 <li>Séance 3 :</li>
                 <ul>
                     <li>Exo 1</li>
