ajout du css pour la page d'accueil

--- a/index.xhtml
+++ b/index.xhtml
@@ -4,113 +4,116 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="assets/css/index.css" type="text/css" />
 
 <title>Aide Doc Web</title>
 
 </head>
 
     <body>
-        <h1>YOOOOOOOOOOOOO</h1>
-        <p>Petit GitHub fait pour vous aidez en Doc Web ou tout simplement pour copier <br/>
-            le texte car bon soyons franc c'est chiant mdr</p>
+        <div class="text">
+            <h1>YOOOOOOOOOOOOO</h1>
+            <p>Petit GitHub fait pour vous aider en Doc Web ou tout simplement pour copier <br/>
+                le texte car bon soyons franc c'est chiant mdr</p>
+        </div>
 
-        <ul>
-            <li>XHTML :</li>
+        <ul id="xhtml">
+            <li class="xhtml">XHTML :</li>
             <ul>
-                <li>Séance 1 :</li>
+                <li class="seance">Séance 1 :</li>
                 <ul>
-                    <li>Exo 2 :</li>
+                    <li class="exo">Exo 2 :</li>
                     <ul>
-                        <li><a href="xhtml/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format ligne de code</a></li>
+                        <li class="a"><a href="xhtml/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>
-                    <li>Exo 6 :</li>
+                    <li class="exo">Exo 6 :</li>
                     <ul>
-                        <li><a href="xhtml/seance-1/exo-6/index.xhtml" target="_blank">Exo 6 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-6/index.xhtml" target="_blank">Exo 6 sous format ligne de code</a></li>
+                        <li class="a"><a href="xhtml/seance-1/exo-6/index.xhtml" target="_blank">Exo 6 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-1/exo-6/index.xhtml" target="_blank">Exo 6 sous format ligne de code</a></li>
                     </ul>
                 </ul>
             </ul>
             <ul>
-                <li>Séance 2 :</li>
+                <li class="seance">Séance 2 :</li>
                 <ul>
-                    <li>Exo 1 :</li>
+                    <li class="exo">Exo 1 :</li>
                     <ul>
-                        <li><a href="xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web (donc la soluce de l'exo)</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format ligne de code</a></li>
+                        <li class="a"><a href="xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web (donc la soluce de l'exo)</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format ligne de code</a></li>
                     </ul>
-                    <li>Exo 2 :</li>
+                    <li class="exo">Exo 2 :</li>
                     <ul>
-                        <li><a href="xhtml/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format ligne de code</a></li>
+                        <li class="a"><a href="xhtml/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>
                 </ul>
             </ul>
             <ul>
-                <li>Séance 3 :</li>
+                <li class="seance">Séance 3 :</li>
                 <ul>
-                    <li>Exo 1</li>
+                    <li class="exo">Exo 1</li>
                     <ul>
-                        <li><a href="xhtml/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format lignes de codes</a></li>
+                        <li class="a"><a href="xhtml/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format lignes de codes</a></li>
                     </ul>
-                    <li>Exo 2</li>
+                    <li class="exo">Exo 2</li>
                     <ul>
-                        <li><a href="xhtml/seance-3/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml" target="_blank">Exo 2 sous format lignes de codes</a></li>
+                        <li class="a"><a href="xhtml/seance-3/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/exo-2/index.xhtml" target="_blank">Exo 2 sous format lignes de codes</a></li>
                     </ul>
-                    <li>Exo Bonus</li>
+                    <li class="exo">Exo Bonus</li>
                     <ul>
-                        <li><a href="xhtml/seance-3/bonus/index.xhtml" target="_blank">Exo Bonus sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml" target="_blank">Exo Bonus sous format lignes de codes</a></li>
+                        <li class="a"><a href="xhtml/seance-3/bonus/index.xhtml" target="_blank">Exo Bonus sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-3/bonus/index.xhtml" target="_blank">Exo Bonus sous format lignes de codes</a></li>
                     </ul>
                 </ul>
             </ul>
         </ul>
-        <ul>
-            <li>CSS :</li>
+        <ul id="css">
+            <li class="css">CSS :</li>
             <ul>
-                <li>Séance 1 :</li>
+                <li class="seance">Séance 1 :</li>
                 <ul>
-                    <li>Exo 2 :</li>
+                    <li class="exo">Exo 2 :</li>
                     <ul>
-                        <li><a href="css/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-2/assets/css/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
+                        <li class="a"><a href="css/seance-1/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-2/assets/css/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>
-                    <li>Exo 3 :</li>
+                    <li class="exo">Exo 3 :</li>
                     <ul>
-                        <li><a href="css/seance-1/exo-3/index.xhtml" target="_blank">Exo 3 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-3/assets/css/index.css" target="_blank">Exo 3 sous format ligne de code</a></li>
+                        <li class="a"><a href="css/seance-1/exo-3/index.xhtml" target="_blank">Exo 3 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-3/assets/css/index.css" target="_blank">Exo 3 sous format ligne de code</a></li>
                     </ul>
-                    <li>Exo 4 :</li>
+                    <li class="exo">Exo 4 :</li>
                     <ul>
-                        <li><a href="css/seance-1/exo-4/index.xhtml" target="_blank">Exo 4 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-4/assets/css/index.css" target="_blank">Exo 4 sous format ligne de code</a></li>
+                        <li class="a"><a href="css/seance-1/exo-4/index.xhtml" target="_blank">Exo 4 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-1/exo-4/assets/css/index.css" target="_blank">Exo 4 sous format ligne de code</a></li>
                     </ul>
                 </ul>
             </ul>
             <ul>
-                <li>Séance 2 :</li>
+                <li class="seance">Séance 2 :</li>
                 <ul>
-                    <li>Exo 1 :</li>
+                    <li class="exo">Exo 1 :</li>
                     <ul>
-                        <li><a href="css/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-1/assets/css/index.css" target="_blank">Exo 1 sous format ligne de code</a></li>
+                        <li class="a"><a href="css/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-1/assets/css/index.css" target="_blank">Exo 1 sous format ligne de code</a></li>
                     </ul>
-                 <!--   <li>Exo 2 :</li>
+                 <!--   <li class="exo">Exo 2 :</li>
                     <ul>
-                        <li><a href="css/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/assets/css/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
+                        <li class="a"><a href="css/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/assets/css/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>-->
                 </ul>
             </ul>
             <!--<ul>
-                <li>Séance 3 :</li>
+                <li class="seance">Séance 3 :</li>
                 <ul>
-                    <li>Exo 1</li>
+                    <li class="exo">Exo 1</li>
                     <ul>
-                        <li><a href="css/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
-                        <li><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1/assets/css/index.css" target="_blank">Exo 1 sous format lignes de codes</a></li>
+                        <li class="a"><a href="css/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1/assets/css/index.css" target="_blank">Exo 1 sous format lignes de codes</a></li>
                     </ul>
                 </ul>
             </ul>-->
