--- a/index.xhtml
+++ b/index.xhtml
@@ -14,7 +14,7 @@
         <div class="text">
             <h1>YOOOOOOOOOOOOO</h1>
             <p>Petit GitHub fait pour vous aider en Doc Web ou tout simplement pour copier <br/>
-                le texte car bon soyons franc c'est chiant mdr</p>
+                le texte car bon soyons franc c'est chiant MDR</p>
         </div>
 
         <ul id="xhtml">
