ajout de l'exo 2 de la séance 2 en css

--- a/css/seance-2/exo-2/index.xhtml
+++ b/css/seance-2/exo-2/index.xhtml
@@ -50,37 +50,39 @@
         border-right-style: solid;
         margin-left: 5%;
         margin-right: 50%;
+        padding-left: 1%;
     }
 
     ol {
         margin-left: 3%;
+        list-style: upper-roman;
     }
 
     ul {
-
+        list-style:outside;
     }
 
     table {
-        margin-left: 3%;
-        margin-right: 30%;
+        margin-left: 5%;
+        width: 45%;
     }
 
     td {
-        padding-left: 20%;
-        padding-right: 20%;
         text-align: center;
+        margin-right: 10%;
     }
 
     address {
-
+        text-align: right;
+        font-size: 12px;
     }
 
     hr {
-
+        border-width: 0;
     }
 
     a { 
-
+        font-style: italic;
     }
 </style>
 
