--- a/index.xhtml
+++ b/index.xhtml
@@ -39,7 +39,7 @@
                 <ul>
                     <li class="exo">Exo 1 :</li>
                     <ul>
-                        <li class="a"><a href="xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web (donc la soluce de l'exo)</a></li>
+                        <li class="a"><a href="xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
                         <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/xhtml/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format ligne de code</a></li>
                     </ul>
                     <li class="exo">Exo 2 :</li>
@@ -100,11 +100,11 @@
                         <li class="a"><a href="css/seance-2/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
                         <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-1/assets/css/index.css" target="_blank">Exo 1 sous format ligne de code</a></li>
                     </ul>
-                 <!--   <li class="exo">Exo 2 :</li>
+                    <li class="exo">Exo 2 :</li>
                     <ul>
                         <li class="a"><a href="css/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
                         <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/assets/css/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
-                    </ul>-->
+                    </ul>
                 </ul>
             </ul>
             <!--<ul>
