--- a/index.xhtml
+++ b/index.xhtml
@@ -110,10 +110,15 @@
             <!--<ul>
                 <li class="seance">Séance 3 :</li>
                 <ul>
-                    <li class="exo">Exo 1</li>
+                    <li class="exo">Exo 1 partie 1</li>
                     <ul>
-                        <li class="a"><a href="css/seance-3/exo-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
-                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1/assets/css/index.css" target="_blank">Exo 1 sous format lignes de codes</a></li>
+                        <li class="a"><a href="css/seance-3/exo-1-1/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1-1/assets/css/index.css" target="_blank">Exo 1 sous format lignes de codes</a></li>
+                    </ul>
+                    <li class="exo">Exo 1 partie 2</li>
+                    <ul>
+                        <li class="a"><a href="css/seance-3/exo-1-2/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1-2/assets/css/index.css" target="_blank">Exo 1 sous format lignes de codes</a></li>
                     </ul>
                 </ul>
             </ul>-->
