Ajout de l'exo wtf

--- a/css/seance-3/exo-2/index.xhtml
+++ b/css/seance-3/exo-2/index.xhtml
@@ -6,13 +6,57 @@
 <title></title>
 <style type="text/css">
 
-/*Pour tester les sélecteurs */
- ul span 
-{
+/*Pour tester les sï¿½lecteurs */
+#B {
+  color: green;
+}
+/*h3.cl3{
+  color: aqua;
+}*/
+/*li span{
+  color: blue;
+}*/
+/*p i{
+  color: blueviolet;
+}*/
+/*ul li{
+  color: brown;
+}*/
+/*li li{ 
+  color: chartreuse;
+}*/
+/*:first-child{
+  color: coral;
+}*/
+/*:first-child span{
+  color: cornflowerblue;
+}*/
+/*ul li li{
+  color: crimson;
+}*/
+/*ul li li span{
+  color: cyan;
+}*/
+/*li[id]{
+  color: darkgoldenrod;
+}*/
+/**[class] *{
+  color: darkgreen;
+}*/
+/*h3 p:first-letter{
+  color: firebrick;
+}*/
+/*h3#id3 * *{
+  color: fuchsia;
+}*/
+/*body ul span{
+  background-color: aqua;
+}*/
+/*ul span {
  font-size : 24pt;
  color : red;
  background-color : yellow;
-}
+}*/
  
 </style>
 
@@ -46,7 +90,7 @@
 <h3 class="cl3">Section 2.1</h3>
 
 <p>Premier paragraphe de la <b>section 2.1</b></p>
-<p>Deuxième paragraphe de la <b><i>section 2.1</i></b></p>
+<p>Deuxiï¿½me paragraphe de la <b><i>section 2.1</i></b></p>
 <p><i>Dernier</i> paragraphe de la section <b>2.1</b></p>
 
 </body>
