--- a/index.xhtml
+++ b/index.xhtml
@@ -120,6 +120,10 @@
                         <li class="a"><a href="css/seance-3/exo-1-2/index.xhtml" target="_blank">Exo 1 sous format Site Web</a></li>
                         <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-1-2/assets/css/index.css" target="_blank">Exo 1 sous format lignes de codes</a></li>
                     </ul>
+                    <li class="exo">Exo 2</li>
+                    <ul>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-2/assets/css/index.css" target="_blank">Pour la correction de l'éxercice, il suffit de retiré ou mettre le "/*" au bonne endroit celon ou vous en êtes</a></li>
+                    </ul>
                 </ul>
             </ul>
         </ul>
