--- a/thth.html
+++ b/thth.html
@@ -32,6 +32,16 @@
         /*Les premières lettres des titres h2 et h3*/
     }
 </style>
+<!--Réponse question 2 :
+h2 + h3 = "Romans"
+p + p > sup = "[1]"
+img[height=100] = l'image
+body a[name] = "Ses deux premiers ..." et "London Gazette ..."
+ul > li = toute les listes sauf celle de "Notes"
+h3 + ul li = toute les listes sauf celle de "Notes"
+h2 + h3 + ul > li = tout les "li" de "Romans"
+p:first-line = "Sir Arthur [...] "
+-->
 </head>
 
 <body>
