--- a/index.xhtml
+++ b/index.xhtml
@@ -103,7 +103,7 @@
                     <li class="exo">Exo 2 :</li>
                     <ul>
                         <li class="a"><a href="css/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format Site Web</a></li>
-                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/assets/css/index.css" target="_blank">Exo 2 sous format ligne de code</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-2/exo-2/index.xhtml" target="_blank">Exo 2 sous format ligne de code</a></li>
                     </ul>
                 </ul>
             </ul>
@@ -122,7 +122,7 @@
                     </ul>
                     <li class="exo">Exo 2</li>
                     <ul>
-                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-2/assets/css/index.css" target="_blank">Pour la correction de l'éxercice, il suffit de retiré ou mettre le "/*" au bonne endroit celon ou vous en êtes</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-2/index.xhtml" target="_blank">Pour la correction de l'éxercice, il suffit de retiré ou mettre le "/*" au bonne endroit celon ou vous en êtes</a></li>
                     </ul>
                 </ul>
             </ul>
