ou je sais pas écrire et alors kestuvafer

--- a/index.xhtml
+++ b/index.xhtml
@@ -122,7 +122,7 @@
                     </ul>
                     <li class="exo">Exo 2</li>
                     <ul>
-                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-2/index.xhtml" target="_blank">Pour la correction de l'éxercice, il suffit de retiré ou mettre le "/*" au bonne endroit celon ou vous en êtes</a></li>
+                        <li class="a"><a href="https://github.com/LoukasLecourt/doc-web/blob/main/css/seance-3/exo-2/index.xhtml" target="_blank">Pour la correction de l'exercice, il suffit de retiré ou de mettre le "/*" au bon endroit selon ou vous en êtes</a></li>
                     </ul>
                 </ul>
             </ul>
